Remove image files from repository to reduce size

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,14 @@ Desktop.ini
 *.sqlite
 *.sql
 config/database.properties
+
+# Image files
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.svg
+*.webp
+*.ico
+*.tiff
